# reid-identifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js
.github/workflows/: codeql.yml  docker-publish.yml  scorecard.yml
reid_app/: Dockerfile  config.py  docker-compose.yml  main.py  model_manager.py  mqtt_frigate.py  pyproject.toml  reid_engine.py  utils.py
reid_app/database/: interface.py  sqlite_repo.py
reid_app/templates/: db_viewer.html  index.html  inspection.html  visualization.html  visualization_umap.html
reid_app/tests/: test_reid_engine.py
tests/: mock_frigate_env.py  publish_mock_event.py  replay_real_events.py  test_model_manager.py  test_mqtt_orphaned_file.py  test_reid_engine.py  test_reid_new_features.py  test_sqlite_repo.py  verify_fix.py  verify_fix.py.orig
