[project]
name = "frigate-reid"
version = "0.1.0"
description = "Frigate Person Re-Identification with OpenVINO and FastAPI"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.5",
    "opencv-python-headless>=4.13.0.92",
    "openvino>=2025.4.1",
    "numpy>=1.26.0,<2.4.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reid_app"]
